<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mano1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Pirmas">First page</string>
    <string name="Antras">Antras puslapis</string>
    <string name="Trecias">Trecias puslapis</string>
    <string name="Facebook">Facebook</string>
    <string name="Youtube">Youtube</string>
    <string name="title_activity_pirmaspsl">First page</string>
    <string name="title_activity_antraspsl">Antraspsl</string>
    <string name="title_activity_treciaspsl">Treciaspsl</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings_intent">settingsIntent</string>
    <string-array name="languages">
                <item>Pasirinkite kalbą</item>
                <item>Lietuvių</item>
                <item>English</item>
            </string-array>
    <string name="exit">Exit</string>
    <string name="exit_question">Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
